...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mME-G1-hHB">
                                                    <rect key="frame" x="324" y="11.5" width="70" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="date"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="70" id="Esg-sN-yxc"/>
...
                                <rect key="frame" x="82" y="94" width="250" height="362"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="Title" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HlA-a9-9Oz">
                                        <rect key="frame" x="0.0" y="0.0" width="250" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Title"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="Location" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rwf-Ji-F3b">
                                        <rect key="frame" x="0.0" y="56" width="250" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Location"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="Description" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z1y-sB-rUa">
                                        <rect key="frame" x="0.0" y="112" width="250" height="34"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GXR-O2-zn5">
                                        <rect key="frame" x="0.0" y="168" width="250" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Date"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mJZ-KD-45A">
                                        <rect key="frame" x="0.0" y="224" width="250" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Address"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f5E-tV-Z48">
                                        <rect key="frame" x="108" y="280" width="34" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="save"/>
                                        <state key="normal" title="Save"/>
                                        <connections>
...
