...
        guard let section = Section(rawValue: indexPath.section) else {
            fatalError("Unexpected section num")
        }
        
        switch section {
        case .todo:
            return "Done"
        case .done:
            return "Undone"
        }
    }
    
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
...
